syntax = "proto3";

package pmpb;

option go_package = "pmpb/";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service ParcelsManager {
    rpc AddParcel (AddParcelRequest) returns (AddParcelResponse);
    rpc DeleteParcel (DeleteParcelRequest) returns (google.protobuf.Empty);
    rpc GetParcel (GetParcelRequest) returns (GetParcelResponse);
    rpc AddCheckpoint(AddCheckpointRequest) returns (google.protobuf.Empty);
    rpc GetCheckpoints(GetCheckpointsRequest) returns (GetCheckpointsResponse);
}

message AddParcelRequest {
    string parcel_name = 1;
    int64 manager_telegram_id = 2;
    string parcel_recipient = 3;
    string parcel_arrival_address = 4;
    google.protobuf.Timestamp parcel_forecast_date = 5;
    string parcel_description = 8;
    ParcelStatus parcel_status = 9;
}

enum ParcelStatus {
    UNKNOWN = 0;
    PENDING = 1;
    IN_TRANSIT = 2;
    DELIVERED = 3;
    CANCELED = 4;
}

message AddParcelResponse {
    string track_number = 1;
}

message DeleteParcelRequest {
    string track_number = 1;
}

message GetParcelRequest {
    string track_number = 1;
}

message GetParcelResponse {
    string parcel_name = 1;
    int64 manager_telegram_id = 2;
    string parcel_recipient = 3;
    string parcel_arrival_address = 4;
    google.protobuf.Timestamp parcel_forecast_date = 5;
    string parcel_description = 8;
    ParcelStatus parcel_status = 9;
}

message AddCheckpointRequest {
    string track_number = 1;
    google.protobuf.Timestamp time = 2;
    string place = 3;
    string description = 4;
}

message GetCheckpointsRequest {
    string track_number = 1;
    uint64 page = 2;
    uint64 page_size = 3;
}

message GetCheckpointsResponse {
    repeated Checkpoint checkpoints = 1;
}

message Checkpoint {
    google.protobuf.Timestamp time = 1;
    string place = 2;
    string description = 3;
}